--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,6 +1,7 @@
 $primary_color: #42b983;
 $second_color: #87f;
 $header_background_color: #87f;
+$price_color: #e80;
 $third_color: #e80;
 $fourth_color: #2c3e50;
 $hover_color: #65d;
