--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -1,8 +1,10 @@
 $primary_color: #42b983;
 $second_color: #87f;
 $header_background_color: #87f;
+$background_color: #fff;
 $price_color: #e80;
 $third_color: #e80;
 $fourth_color: #2c3e50;
 $hover_color: #65d;
 $button_background: #f4f7fc;
+$disabled_color: #EDEDED;
