--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -1,3 +1,12 @@
+// Remove chrome autocomplete stylish
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active  {
+  box-shadow: 0 0 0 30px white inset !important;
+  -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
+
 .field {
   position: relative;
   margin-bottom: 55px;
@@ -14,7 +23,7 @@
     top: 10px;
     left: 10px;
     color: $primary_color;
-    background: white;
+    background: $background_color;
     z-index: 1;
     padding: 2px;
     transition: .3s ease;
@@ -24,8 +33,8 @@
     top: -10px;
   }
 
-  &__input[type="email"]{
-    background: royalblue;
+  &.filled &__label{
+    top: -10px;
   }
 
   &__input, 
